--- a/resources.html
+++ b/resources.html
@@ -86,6 +86,10 @@
 					<a href="http://www.coolapk.com/apk/com.estrongs.android.pop" target="_blank">ES文件管理器</a><br />
 					臃肿但比较方便好用，能够创建FTP来与其他设备快速传输文件
 				</div>
+				<div class="content">
+					<a href="http://pan.baidu.com/share/link?shareid=1648024517&uk=2788149454" target="_blank">apktool 5.2</a><br />
+					zipalign优化时使用，5.2以上版本无此功能
+				</div>
 			</div>
 
 			<div class="section" id="cont_2.2">
@@ -296,6 +300,10 @@
 				<div class="content">
 					<a href="http://pan.baidu.com/share/link?shareid=711454717&uk=2788149454">SCPacker</a><br />
 					感谢百度贴吧-电离的Tesla 的开发和提供！
+				</div>
+				<div class="content">
+					<a href="http://pan.baidu.com/share/link?shareid=1759953273&uk=2788149454">scpak</a><br />
+					同样由百度贴吧-电离的Tesla 开发的工具，为SCPacker的第二代，可将Content/Fonts中的字库文件解开
 				</div>
 			</div>
 		</div>
