--- a/nav_update.html
+++ b/nav_update.html
@@ -69,8 +69,9 @@
 				<ol>
 					<li>网页体验优化，完美流畅</li>
 					<li>更新Blocksdata教程对应游戏1.29，修改了一些翻译和说明</li>
-					<li>资源下载整合增加安卓版pak处理器，感谢百度贴吧-瞄准地雷的开发和提供！</li>
-					<li>Content解析针对新出的安卓版pak处理器对第一节做了更新；丰富、精简了第二节对一些文件的说明</li>
+					<li>资源下载整合增加安卓版pak处理器，感谢百度贴吧-瞄准地雷的开发和提供！还增加了apktool以及SCPacker的第二代——scpak</li>
+					<li>Content解析针对新出的安卓版pak处理器对第一节做了更新；更新、丰富、精简了第二节对一些文件的说明</li>
+					<li>Android基础教程第二节增加“关于zipalign”小节，由百度贴吧-看丶小星星哎 发现</li>
 				</ol>
 			</div>
 		</div>
