xml基础知识另立成篇，一些小调整
~

--- a/content_folder_tutorial.html
+++ b/content_folder_tutorial.html
@@ -42,7 +42,7 @@
 	
 	<!--顶栏-->
 	<div id="big_title_div" onclick="goTop()">Content解析</div>
-	<div id="last_update">——更新日期 2015年8月5日——</div>
+	<div id="last_update">——更新日期 2016年1月25日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
@@ -89,7 +89,8 @@
 				</div>
 				<div class="content">
 					<h3>Clothes.xml</h3>
-					存储了游戏中所有衣物数据的xml文件，可直接用文本编辑器编辑，修改详情参考<a href="clothes_tutorial.html">Clothes 解析</a>
+					存储了游戏中所有衣物数据的xml文件，可直接用文本编辑器编辑，修改详情参考<a href="clothes_tutorial.html">Clothes 解析</a><br />
+					若要修改xml文件，建议先阅读<a href="xml_tutorial.html">XML基础知识</a>
 				</div>
 				<div class="content">
 					<h3>CraftingRecipes.xml</h3>
