--- a/crafting_recipes_tutorial.html
+++ b/crafting_recipes_tutorial.html
@@ -41,7 +41,7 @@
 	
 	<!--顶栏-->
 	<div id="big_title_div" onclick="goTop()">CraftingRecipes解析</div>
-	<div id="last_update">——更新日期 2015年7月15日——</div>
+	<div id="last_update">——更新日期 2016年1月25日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
@@ -50,7 +50,8 @@
 	<div id="upper_box">
 		<h1>前言</h1>
 		<div class="content">
-			本教程由百度贴吧-销锋镝铸编写
+			本教程由百度贴吧-销锋镝铸编写<br />
+			建议先阅读<a href="xml_tutorial.html">XML基础知识</a>，再阅读此教程
 		</div>
 	</div>
 
