--- a/ios_tutorial.html
+++ b/ios_tutorial.html
@@ -45,7 +45,7 @@
 	
 	<!--顶栏-->
 	<div id="big_title_div" onclick="goTop()">IOS基础教程</div>
-	<div id="last_update">——更新日期 2015年8月3日——</div>
+	<div id="last_update">——更新日期 2016年1月25日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
@@ -101,6 +101,7 @@
 		
 		<div class="chapter" id="cont_3">
 			<h1>第三节 生成安装包</h1>
+			<span style="font-size:10pt; display:block; font-weight:bold;">——注：按此步骤生成的安装包不保证能够在所有IOS设备上能够正常使用，建议越狱玩家按照第二节的第二步手动替换Content.pak</span>
 			<div class="content">
 				打开pp助手，更多-系统管理（3.X版本PP助手则是管理-系统管理）-Survivalcraft-备份-不保存存档
 				<img class="saimg"
