--- a/clothes_tutorial.html
+++ b/clothes_tutorial.html
@@ -31,7 +31,7 @@
 	
 	<!--顶栏-->
 	<div id="big_title_div" onclick="goTop()">Clothes解析</div>
-	<div id="last_update">——更新日期 2015年7月23日——</div>
+	<div id="last_update">——更新日期 2016年1月25日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
@@ -40,7 +40,8 @@
 	<div id="upper_box">
 		<h1>前言</h1>
 		<div class="content">
-			本教程由百度贴吧-销锋镝铸编写
+			本教程由百度贴吧-销锋镝铸编写<br />
+			建议先阅读<a href="xml_tutorial.html">XML基础知识</a>，再阅读此教程
 			<script>if(isMobile == true){document.write("<br />提示：手机端建议横屏查看");}</script>
 		</div>
 	</div>
@@ -68,7 +69,7 @@
 						<td>说明</td>
 					</tr>
 					<tr>
-						<td>ClothingData Index</td>
+						<td>Index</td>
 						<td>衣物创造模式显示顺序</td>
 						<td></td>
 					</tr>
