--- a/nav_update.html
+++ b/nav_update.html
@@ -73,6 +73,7 @@
 					<li>Content解析针对新出的安卓版pak处理器对第一节做了更新；更新、丰富、精简了第二节对一些文件的说明</li>
 					<li>Android基础教程第二节增加“关于zipalign”小节，由百度贴吧-看丶小星星哎 发现</li>
 					<li>Database解析增加一个使白色加鞍马跑得更快的例子，将XML基础知识另立成篇</li>
+					<li>加入代码高亮，使示例代码看起来不再困难</li>
 				</ol>
 			</div>
 		</div>
