--- a/xml_tutorial.html
+++ b/xml_tutorial.html
@@ -6,6 +6,8 @@
 	<title>XML基础知识</title>
 	<link href="css/normalize.css" rel="stylesheet" type="text/css" />
 	<script src="js/jquery.min.js"></script>
+	<link href="css/prism.css" rel="stylesheet"/>
+	<script src="js/prism.js"></script>
 	<script>document.write("<script src='js/version.js?" + Math.random() + "'><" + "/script>");</script>
 	<script>document.write("<link id='css_main' href='css/main.css?" + ver + "' rel='stylesheet' type='text/css' />");</script>
 	<script>document.write("<link id='css_article' href='css/article.css?" + ver + "' rel='stylesheet' type='text/css' />")</script>
@@ -93,7 +95,7 @@
 					 <div style="padding-left:12px;">&lt;File Name=&quot;b&quot; Author =&quot;Edmund&quot; /&gt; （作者为Edmund的文件b）</div>
 					 <div style="padding-left:12px;">&lt;File Name=&quot;c&quot; Author =&quot;Lucy&quot; /&gt; （作者为Lucy的文件c）</div>
 					&lt;/Folder&gt;<br />
-					从这一段代码可以看出文件夹d继承到了来自文件夹A的作者为Peter的文件a和作者为Susan的文件b，但是继承来的文件b与已有的文件b相冲突，此时优先保留原有的文件c，即文件夹B实际代码为<br />
+					从这一段代码可以看出文件夹d继承到了来自文件夹A的作者为Peter的文件a和作者为Susan的文件b，但是继承来的文件b与已有的文件b相冲突，此时优先保留原有的文件c，即文件夹B的实际代码为<br />
 					&lt;Folder Name=&quot;d&quot; InheritanceParent =&quot;1950&quot;&gt; （识别码为1950的文件夹B）<br />
 					<div style="padding-left:12px;">&lt;File Name=&quot;a&quot; Author=&quot;Peter&quot; /&gt; （作者为Peter的文件a）</div>
 					<div style="padding-left:12px;">&lt;File Name=&quot;b&quot; Author=&quot;Edmund&quot; /&gt; （作者为Edmund的文件b）</div>
@@ -108,15 +110,19 @@
 			<div class="section">
 				<div class="content">
 					当一个元素没有继承码属性时，那么它将默认继承其父元素的父对象中相对应元素的内容，实例：<br />
-			  &lt;EntityTemplate Name="LandAnimal" Guid="e4275171-a39f-413f-8888-4c472868364d" InheritanceParent="3f077159-f492-419b-859a-bb051de6339f"&gt;<br />
-				&lt;MemberComponentTemplate Name="Mount" Guid="d7855ac3-4c88-4e86-8018-83155cd7bfbc"&gt;<br />
-				  &lt;Parameter Name="MountOffset" Guid="3b86ca1c-1765-4fd7-ad58-6f52d9651188" Value="0,1.35,0" Type="Microsoft.Xna.Framework.Vector3" /&gt;<br />
-				&lt;/MemberComponentTemplate&gt;<br />...<br/>&lt;/EntityTemplate&gt;<br /><br />
+<pre class="line-numbers language-markup">&lt;EntityTemplate Name="LandAnimal" Guid="e4275171-a39f-413f-8888-4c472868364d" InheritanceParent="3f077159-f492-419b-859a-bb051de6339f"&gt;
+	&lt;MemberComponentTemplate Name="Mount" Guid="d7855ac3-4c88-4e86-8018-83155cd7bfbc"&gt;
+		&lt;Parameter Name="MountOffset" Guid="3b86ca1c-1765-4fd7-ad58-6f52d9651188" Value="0,1.35,0" Type="Microsoft.Xna.Framework.Vector3" /&gt;
+	&lt;/MemberComponentTemplate&gt;
+	...
+&lt;/EntityTemplate&gt;
 				
-			  &lt;EntityTemplate Name="AICreature" Guid="3f077159-f492-419b-859a-bb051de6339f" InheritanceParent="bc5be211-c1f8-4e50-9ffb-4fde625d2692"&gt;<br />
-				&lt;MemberComponentTemplate Name="Mount" Guid="d7655ac3-4c88-4e89-8018-83155cd7bfbc" InheritanceParent="d0b14127-39ce-4490-af00-fb4111e9c51e"&gt;<br />
-				  &lt;Parameter Name="DismountOffset" Guid="3be6ca1c-17c5-4fd7-ad58-6f52d9651188" Value="1.5,0.3,0" Type="Microsoft.Xna.Framework.Vector3" /&gt;<br />
-				&lt;/MemberComponentTemplate&gt;<br/>...<br />&lt;/EntityTemplate&gt;<br />
+&lt;EntityTemplate Name="AICreature" Guid="3f077159-f492-419b-859a-bb051de6339f" InheritanceParent="bc5be211-c1f8-4e50-9ffb-4fde625d2692"&gt;
+	&lt;MemberComponentTemplate Name="Mount" Guid="d7655ac3-4c88-4e89-8018-83155cd7bfbc" InheritanceParent="d0b14127-39ce-4490-af00-fb4111e9c51e"&gt;
+		&lt;Parameter Name="DismountOffset" Guid="3be6ca1c-17c5-4fd7-ad58-6f52d9651188" Value="1.5,0.3,0" Type="Microsoft.Xna.Framework.Vector3" /&gt;
+	&lt;/MemberComponentTemplate&gt;
+	...
+&lt;/EntityTemplate&gt;</pre>
 				  LandAnimal的父对象是AICreature，因此LandAnimal中的Mount就会继承得到AICreature中Mount的DismountOffset。<br />
 				</div>
 			</div>
