使代码块高亮

--- a/clothes_tutorial.html
+++ b/clothes_tutorial.html
@@ -6,6 +6,8 @@
 	<title>Clothes解析</title>
 	<link href="css/normalize.css" rel="stylesheet" type="text/css" />
 	<script src="js/jquery.min.js"></script>
+	<link href="css/prism.css" rel="stylesheet"/>
+	<script src="js/prism.js"></script>
 	<script>document.write("<script src='js/version.js?" + Math.random() + "'><" + "/script>");</script>
 	<script>document.write("<link id='css_main' href='css/main.css?" + ver + "' rel='stylesheet' type='text/css' />");</script>
 	<script>document.write("<link id='css_article' href='css/article.css?" + ver + "' rel='stylesheet' type='text/css' />")</script>
@@ -55,7 +57,7 @@
 				例如第二行：
 			</div>
 			<div class="content">
-				&lt;ClothingData Index=&quot;1&quot; DisplayName=&quot;Old Shirt&quot; Slot=&quot;Torso&quot; ArmorProtection=&quot;0.2&quot; Sturdiness=&quot;10&quot; Insulation=&quot;2.0&quot; MovementSpeedFactor=&quot;1&quot; DensityModifier=&quot;0.0&quot; IsOuter=&quot;False&quot; CanByDyed=&quot;True&quot; Layer=&quot;1&quot; TextureName=&quot;Textures\Clothing\OldShirt&quot; ImpactSoundsFolder=&quot;&quot; Description=&quot;Old shirt you wore when being abandoned on this land. Can be dyed. No protection. Weak insulation.&quot; /&gt;
+<pre class="language-markup"><code>&lt;ClothingData Index=&quot;1&quot; DisplayName=&quot;Old Shirt&quot; Slot=&quot;Torso&quot; ArmorProtection=&quot;0.2&quot; Sturdiness=&quot;10&quot; Insulation=&quot;2.0&quot; MovementSpeedFactor=&quot;1&quot; DensityModifier=&quot;0.0&quot; IsOuter=&quot;False&quot; CanByDyed=&quot;True&quot; Layer=&quot;1&quot; TextureName=&quot;Textures\Clothing\OldShirt&quot; ImpactSoundsFolder=&quot;&quot; Description=&quot;Old shirt you wore when being abandoned on this land. Can be dyed. No protection. Weak insulation.&quot; /&gt;</code></pre>
 			</div>
 		</div>
 		
